# spin-test

./: .gitignore  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md  build.rs  build.sh  spin-pluginify.toml
.github/workflows/: build.yml  release.yml
.plugin-manifests/: generate-manifest.sh  plugin-spin-compat.txt
conformance-tests/: Cargo.toml
conformance-tests/src/: main.rs  runtime.rs
crates/router/: Cargo.toml
crates/router/src/: bindings.rs  lib.rs
crates/router/wit/: world.wit
crates/rust-host-sdk/: README.md
crates/rust-host-sdk/example/: Cargo.toml
crates/rust-sdk/: Cargo.toml
crates/rust-sdk/src/: lib.rs
crates/spin-test/: Cargo.toml
crates/spin-test-sdk/: Cargo.toml  README.md
crates/spin-test-sdk-macro/: Cargo.toml
crates/spin-test-sdk-macro/src/: lib.rs
crates/spin-test-sdk/src/: lib.rs  type_extensions.rs
crates/spin-test-virt/: Cargo.toml
crates/spin-test-virt/src/: bindings.rs  helper.rs  lib.rs  manifest.rs  wasi.rs  wasi_virt.rs
crates/spin-test-virt/src/wasi/: filesystem.rs  http.rs  http_helper.rs  io.rs  tcp.rs
crates/spin-test-virt/wit/: world.wit
crates/spin-test/host-wit/: world.wit
crates/spin-test/src/: main.rs
crates/spin-wasi-virt/: Cargo.toml  virt.component.wasm
crates/spin-wasi-virt/src/: bindings.rs  lib.rs  main.rs
crates/spin-wasi-virt/wit/: world.wit
example/: .gitignore  README.md  build.sh  composition.wac  run.sh
example/app/: spin.toml
example/app-py/: .gitignore  app.py  requirements.txt  spin.toml
example/app-rs/: Cargo.toml
example/app-rs/src/: lib.rs
example/guest/: Cargo.toml  spin.toml
example/guest/src/: lib.rs
example/host/: Cargo.toml
example/host/src/: lib.rs  main.rs  support.rs
example/test-js/: componentize.mjs  package-lock.json  package.json  test.js
example/test-rs/: wasm_test.wasm
example/test-rs/src/: bindings.rs  lib.rs
example/wasm-test/: Cargo.toml  wasm_test.wasm
example/wasm-test/src/: bindings.rs  lib.rs
examples/: README.md
examples/apps/app-py/: requirements.txt  spin.toml
examples/apps/app-rs/: spin.toml
examples/apps/app-rs/src/: lib.rs
examples/test-js/: .gitignore  README.md  componentize.mjs  package.json  test.js
examples/test-rs/: .gitignore  Cargo.toml  README.md
examples/test-rs/src/: bindings.rs  lib.rs
host-wit/: world.wit
src/: bindings.rs  composition.rs  lib.rs  main.rs  manifest.rs  runtime.rs
wit/: world.wit
