[package]
name = "spin-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
glob = "0.3"
http-body-util = "0.1.1"
hyper = "1.0"
libtest-mimic = "0.7"
log = "0.4"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
spin-common = { git = "https://github.com/fermyon/spin" }
spin-componentize = { git = "https://github.com/fermyon/spin" }
spin-http = { git = "https://github.com/fermyon/spin", default-features = false }
spin-manifest = { workspace = true }
temp-dir = "0.1.13"
tokio = "1.0"
toml = { workspace = true }
wac-graph = "0.3"
wasmtime = "21.0"
wasmtime-wasi = "21.0"
wit-component = { workspace = true }
wit-parser = { workspace = true }

[workspace]
members = ["crates/*", "examples/test-rs", "examples/apps/app-rs"]

[workspace.dependencies]
anyhow = "1.0"
spin-expressions = { git = "https://github.com/fermyon/spin" }
spin-manifest = { git = "https://github.com/fermyon/spin" }
spin-outbound-networking = { git = "https://github.com/fermyon/spin" }
spin-serde = { git = "https://github.com/fermyon/spin" }
toml = { version = "0.8", features = ["preserve_order"] }
wit-component = "0.208"
wit-parser = "0.208"
