[package]
name = "spin-test-conformance-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
conformance-tests = { git = "https://github.com/fermyon/conformance-tests", branch = "sqlite" }
test-environment = { git = "https://github.com/fermyon/conformance-tests", branch = "sqlite" }
spin-test = { path = ".." }
wasmtime = "22.0"
wasmtime-wasi = "22.0"
