[package]
name = "router"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.5.0"
wit-bindgen-rt = "0.24.0"
toml = { workspace = true }
spin-manifest = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "fermyon:router"

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "../spin-test-virt/wit/deps/http" }
"wasi:random" = { path = "../spin-test-virt/wit/deps/random" }
"wasi:cli" = { path = "../spin-test-virt/wit/deps/cli" }
"wasi:io" = { path = "../spin-test-virt/wit/deps/io" }
"wasi:clocks" = { path = "../spin-test-virt/wit/deps/clocks" }
"wasi:filesystem" = { path = "../spin-test-virt/wit/deps/filesystem" }
"wasi:sockets" = { path = "../spin-test-virt/wit/deps/sockets" }
