[package]
name = "router"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bitflags = "2.5.0"
wit-bindgen-rt = "0.24.0"
toml = { workspace = true }
spin-manifest = { workspace = true }
spin-http = { git = "https://github.com/fermyon/spin", default-features = false }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "fermyon:router"

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "../../host-wit/deps/http" }
"wasi:random" = { path = "../../host-wit/deps/random" }
"wasi:cli" = { path = "../../host-wit/deps/cli" }
"wasi:io" = { path = "../../host-wit/deps/io" }
"wasi:clocks" = { path = "../../host-wit/deps/clocks" }
"wasi:filesystem" = { path = "../../host-wit/deps/filesystem" }
"wasi:sockets" = { path = "../../host-wit/deps/sockets" }
