[package]
name = "spin-test-virt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bitflags = "2.5.0"
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }
spin-expressions = { workspace = true }
spin-manifest = { workspace = true }
spin-outbound-networking = { workspace = true }
spin-serde = { workspace = true }
toml = { workspace = true }


[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:spin-test-virt"

[package.metadata.component.target]
world = "env"
path = "../../host-wit/deps/spin-test-virt"

[package.metadata.component.target.dependencies]
"fermyon:spin-wasi-virt" = { path = "../../host-wit/deps/spin-wasi-virt" }
"fermyon:spin" = { path = "../../host-wit/deps/fermyon" }
"wasi:http" = { path = "../../host-wit/deps/http" }
"wasi:random" = { path = "../../host-wit/deps/random" }
"wasi:cli" = { path = "../../host-wit/deps/cli" }
"wasi:io" = { path = "../../host-wit/deps/io" }
"wasi:clocks" = { path = "../../host-wit/deps/clocks" }
"wasi:filesystem" = { path = "../../host-wit/deps/filesystem" }
"wasi:sockets" = { path = "../../host-wit/deps/sockets" }
