[package]
name = "spin-test-virt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
ipnet = "2.9"
spin-expressions = { workspace = true }
spin-manifest = { workspace = true }
spin-outbound-networking = { workspace = true }
spin-serde = { workspace = true }
spin-locked-app = { git = "https://github.com/fermyon/spin" }
toml = { workspace = true }
wit-bindgen-rt = { workspace = true }
# rusqlite > 0.25 fails to build with various linker errors
rusqlite = { version = "0.25", features = ["bundled", "wasm32-wasi-vfs"] }


[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:spin-test-virt"

[package.metadata.component.target]
world = "env"
path = "../../host-wit/deps/spin-test-virt"

[package.metadata.component.target.dependencies]
"fermyon:spin-wasi-virt" = { path = "../../host-wit/deps/spin-wasi-virt" }
"fermyon:spin" = { path = "../../host-wit/deps/fermyon" }
"wasi:http" = { path = "../../host-wit/deps/http" }
"wasi:random" = { path = "../../host-wit/deps/random" }
"wasi:cli" = { path = "../../host-wit/deps/cli" }
"wasi:io" = { path = "../../host-wit/deps/io" }
"wasi:clocks" = { path = "../../host-wit/deps/clocks" }
"wasi:filesystem" = { path = "../../host-wit/deps/filesystem" }
"wasi:sockets" = { path = "../../host-wit/deps/sockets" }
