[package]
name = "spin-test"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
http-body-util = "0.1.1"
hyper = "1.0"
tokio = "1.0"
spin-common = { git = "https://github.com/fermyon/spin" }
spin-componentize = { git = "https://github.com/fermyon/spin" }
spin-manifest = { git = "https://github.com/fermyon/spin" }
wac-graph = { git = "https://github.com/peterhuene/wac" }
wasmtime = "19.0.1"
wasmtime-wasi = "19.0.1"
wasmtime-wasi-http = "19.0.1"
