[package]
name = "my_app"
authors = ["Ryan Levick <ryan.levick@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.0.0"
serde = { version = "1", features = ["derive"] }
serde_qs = "0.12.0"
serde_json = "1.0"

[workspace]
