[package]
name = "wasm-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.5.0"
wit-bindgen-rt = "0.24.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:test"

[package.metadata.component.target]
world = "test"
path = "../../crates/spin-test/host-wit"

[package.metadata.component.target.dependencies]
"fermyon:spin" = { path = "../../wit/deps/fermyon" }
"fermyon:spin-test-virt" = { path = "../../crates/spin-test/host-wit/deps/spin-test" }
"wasi:http" = { path = "../../wit/deps/http" }
"wasi:random" = { path = "../../wit/deps/random" }
"wasi:cli" = { path = "../../wit/deps/cli" }
"wasi:io" = { path = "../../wit/deps/io" }
"wasi:clocks" = { path = "../../wit/deps/clocks" }
"wasi:filesystem" = { path = "../../wit/deps/filesystem" }
"wasi:sockets" = { path = "../../wit/deps/sockets" }

[package.metadata.component.dependencies]
