[package]
name = "wasm-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.5.0"
wit-bindgen-rt = "0.24.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:test"

[package.metadata.component.target]
world = "test"
path = "../../host-wit"

[package.metadata.component.target.dependencies]
"fermyon:spin" = { path = "../../crates/spin-test-virt/wit/deps/fermyon" }
"fermyon:spin-test-virt" = { path = "../../host-wit/deps/spin-test" }
"wasi:http" = { path = "../../crates/spin-test-virt/wit/deps/http" }
"wasi:random" = { path = "../../crates/spin-test-virt/wit/deps/random" }
"wasi:cli" = { path = "../../crates/spin-test-virt/wit/deps/cli" }
"wasi:io" = { path = "../../crates/spin-test-virt/wit/deps/io" }
"wasi:clocks" = { path = "../../crates/spin-test-virt/wit/deps/clocks" }
"wasi:filesystem" = { path = "../../crates/spin-test-virt/wit/deps/filesystem" }
"wasi:sockets" = { path = "../../crates/spin-test-virt/wit/deps/sockets" }

[package.metadata.component.dependencies]
