[package]
name = "wasm-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.5.0"
wit-bindgen-rt = "0.24.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:test"

[package.metadata.component.target]
world = "test"
path = "../../host-wit"

[package.metadata.component.target.dependencies]
"fermyon:spin-test-virt" = { path = "../../host-wit/deps/spin-test" }
"fermyon:spin" = { path = "../../host-wit/deps/fermyon" }
"wasi:http" = { path = "../../host-wit/deps/http" }
"wasi:random" = { path = "../../host-wit/deps/random" }
"wasi:cli" = { path = "../../host-wit/deps/cli" }
"wasi:io" = { path = "../../host-wit/deps/io" }
"wasi:clocks" = { path = "../../host-wit/deps/clocks" }
"wasi:filesystem" = { path = "../../host-wit/deps/filesystem" }
"wasi:sockets" = { path = "../../host-wit/deps/sockets" }

[package.metadata.component.dependencies]
